--- a/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
+++ b/packages/storybook-html/stories/components/loading-spinner/loading-spinner.mdx
@@ -17,9 +17,7 @@ The loading spinner component is a progress indicator used to provide feedback t
 
 The default component is UQ purple for use on light backgrounds such as white or light-grey.
 
-<Canvas sourceState="hidden">
-  <Story of={LoadingSpinnerStories.loadingSpinner} />
-</Canvas>
+<Canvas of={LoadingSpinnerStories.loadingSpinner} />
 
 ```html
 <div class="uq-loading-spinner" role="alert" aria-live="assertive">
@@ -35,9 +33,7 @@ The variants can be used in isolation or combined. For example if you would like
 
 Changes the colour of the component to white so it can be used on darker backgrounds such as UQ purple.
 
-<Canvas sourceState="hidden">
-  <Story of={LoadingSpinnerStories.loadingSpinnerLight} />
-</Canvas>
+<Canvas of={LoadingSpinnerStories.loadingSpinnerLight} />
 
 ```html
 <div
@@ -53,9 +49,7 @@ Changes the colour of the component to white so it can be used on darker backgro
 
 Reduces the component to half the size of the default.
 
-<Canvas sourceState="hidden">
-  <Story of={LoadingSpinnerStories.loadingSpinnerSmall} />
-</Canvas>
+<Canvas of={LoadingSpinnerStories.loadingSpinnerSmall} />
 
 ```html
 <div
