--- a/packages/storybook-html/stories/components/page-header/page-header.mdx
+++ b/packages/storybook-html/stories/components/page-header/page-header.mdx
@@ -11,9 +11,7 @@ import * as PageHeaderStories from "./page-header.stories";
 The Page header component is used to display the page title or the breadcrumbs or a combination of both.
 The default background color is set to light grey to distinguish it from the page contents.
 
-<Canvas sourceState="hidden">
-  <Story of={PageHeaderStories.pageHeader} />
-</Canvas>
+<Canvas of={PageHeaderStories.pageHeader} />
 
 ### Page header default
 
