--- a/packages/storybook-html/stories/components/pagination/pagination.mdx
+++ b/packages/storybook-html/stories/components/pagination/pagination.mdx
@@ -19,21 +19,15 @@ If the component is displaying the last page, the links 'last' and 'next' are re
 
 ### Pagination first
 
-<Canvas sourceState="hidden">
-  <Story of={PaginationStories.paginationFirst} />
-</Canvas>
+<Canvas of={PaginationStories.paginationFirst} />
 
 ### Pagination middle
 
-<Canvas sourceState="hidden">
-  <Story of={PaginationStories.paginationMiddle} />
-</Canvas>
+<Canvas of={PaginationStories.paginationMiddle} />
 
 ### Pagination last
 
-<Canvas sourceState="hidden">
-  <Story of={PaginationStories.paginationLast} />
-</Canvas>
+<Canvas of={PaginationStories.paginationLast} />
 
 #### The table below list's the classname's of the pagination component and what it does.
 
