--- a/packages/storybook-html/stories/components/previous-next/previous-next.mdx
+++ b/packages/storybook-html/stories/components/previous-next/previous-next.mdx
@@ -21,9 +21,7 @@ issues](https://github.com/uq-its-ss/design-system/issues)
 
 An instance when only the next button is visible
 
-<Canvas sourceState="hidden">
-  <Story of={PreviousNextStories.previousNextInitial} />
-</Canvas>
+<Canvas of={PreviousNextStories.previousNextInitial} />
 
 ```html
 <div class="uq-previous-next">
@@ -46,9 +44,7 @@ An instance when only the next button is visible
 
 An instance when both the previous and next buttons are visible
 
-<Canvas sourceState="hidden">
-  <Story of={PreviousNextStories.previousNextMiddle} />
-</Canvas>
+<Canvas of={PreviousNextStories.previousNextMiddle} />
 
 ```html
 <!-- Previous and Next buttons are visible -->
@@ -72,9 +68,7 @@ An instance when both the previous and next buttons are visible
 
 An instance when only the previous button is visible
 
-<Canvas sourceState="hidden">
-  <Story of={PreviousNextStories.previousNextFinal} />
-</Canvas>
+<Canvas of={PreviousNextStories.previousNextFinal} />
 
 ```html
 <div class="uq-previous-next">
