--- a/packages/storybook-html/stories/components/progression/progression.mdx
+++ b/packages/storybook-html/stories/components/progression/progression.mdx
@@ -19,9 +19,7 @@ The Progression component is a progress indicator helping the user to complete a
 
 In the initial instance, the component is in it's starting default stage.
 
-<Canvas sourceState="hidden">
-  <Story of={ProgressionStories.progressionInitial} />
-</Canvas>
+<Canvas of={ProgressionStories.progressionInitial} />
 
 ```html
 <ul class="uq-progression">
@@ -42,9 +40,7 @@ In the initial instance, the component is in it's starting default stage.
 
 An instance when a step is done partly but not completed.
 
-<Canvas sourceState="hidden">
-  <Story of={ProgressionStories.progressionMiddle} />
-</Canvas>
+<Canvas of={ProgressionStories.progressionMiddle} />
 
 ```html
 <ul class="uq-progression">
@@ -80,9 +76,7 @@ An instance when a step is done partly but not completed.
 
 The instance when all steps are done and completed.
 
-<Canvas sourceState="hidden">
-  <Story of={ProgressionStories.progressionFinal} />
-</Canvas>
+<Canvas of={ProgressionStories.progressionFinal} />
 
 ```html
 <ul class="uq-progression">
