--- a/packages/storybook-html/stories/components/tabs/tabs.mdx
+++ b/packages/storybook-html/stories/components/tabs/tabs.mdx
@@ -18,9 +18,10 @@ hierarchical level.
 
 ### Default / Outline
 
-<Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsOutline} autoplay />
-</Canvas>
+<Canvas of={TabsStories.tabsOutline}
+story={{
+     autoplay : true,
+  }} />
 
 ```html
 <div id="tabsDefaultExample" class="uq-tabs uq-tabs--outline">
@@ -94,9 +95,10 @@ hierarchical level.
 
 ### Minimal
 
-<Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsMinimal} autoplay />
-</Canvas>
+<Canvas of={TabsStories.tabsMinimal} 
+story={{
+     autoplay : true,
+  }} />
 
 ```html
 <div class="uq-tabs">...</div>
@@ -104,9 +106,10 @@ hierarchical level.
 
 ### Lined
 
-<Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsLined} autoplay />
-</Canvas>
+<Canvas of={TabsStories.tabsLined} 
+story={{
+     autoplay : true,
+  }} />
 
 ```html
 <div class="uq-tabs uq-tabs--lined">...</div>
@@ -114,9 +117,10 @@ hierarchical level.
 
 ### With icon
 
-<Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsWithIcon} autoplay />
-</Canvas>
+<Canvas of={TabsStories.tabsWithIcon} 
+story={{
+     autoplay : true,
+  }} />
 
 ```html
 <div class="uq-tabs uq-tabs--outline">
@@ -137,9 +141,10 @@ hierarchical level.
 
 ### Full width
 
-<Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsFullWidth} autoplay />
-</Canvas>
+<Canvas of={TabsStories.tabsFullWidth} 
+story={{
+     autoplay : true,
+  }} />
 
 ```html
 <div class="uq-tabs uq-tabs--outline uq-tabs--full-width">...</div>
@@ -147,9 +152,10 @@ hierarchical level.
 
 ### Small
 
-<Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsSmall} autoplay />
-</Canvas>
+<Canvas of={TabsStories.tabsSmall} 
+story={{
+     autoplay : true,
+  }} />
 
 ```html
 <div class="uq-tabs uq-tabs--outline uq-tabs--small">...</div>
@@ -157,9 +163,10 @@ hierarchical level.
 
 ### Reversed
 
-<Canvas sourceState="hidden">
-  <Story of={TabsStories.tabsReversed} autoplay />
-</Canvas>
+<Canvas of={TabsStories.tabsReversed} 
+story={{
+     autoplay : true,
+  }} />
 
 ```html
 <div class="uq-tabs uq-tabs--outline uq-tabs--reversed">...</div>
