--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-1-live-data-indicator.mdx
@@ -10,12 +10,8 @@ import * as UqMaps1LiveDataIndicatorStories from "./uq-maps-1-live-data-indicato
 
 ## Default
 
-<Canvas sourceState="hidden">
-  <Story of={UqMaps1LiveDataIndicatorStories.liveDataIndicator} />
-</Canvas>
+<Canvas of={UqMaps1LiveDataIndicatorStories.liveDataIndicator} />
 
 ## Preset color variants
 
-<Canvas sourceState="hidden">
-  <Story of={UqMaps1LiveDataIndicatorStories.liveDataIndicatorVariants} />
-</Canvas>
+<Canvas of={UqMaps1LiveDataIndicatorStories.liveDataIndicatorVariants} />
