--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
@@ -18,9 +18,10 @@ location.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps3WayfindingControlsStories.wayfindingControl} autoplay />
-</Canvas>
+<Canvas of={UqMaps3WayfindingControlsStories.wayfindingControl} 
+story={{
+     autoplay : true,
+  }} />
 
 ## 3B. With circular progress indicator
 
@@ -31,12 +32,9 @@ class to the container instead. We also have to add in some extra markup and
 scripted behaviour for the [_Material Design_][1] progress indicator. Please see example
 code.
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story
-    of={UqMaps3WayfindingControlsStories.wayfindingControlWorking}
+<Canvas of={UqMaps3WayfindingControlsStories.wayfindingControlWorking}
     autoplay
   />
-</Canvas>
 
 [1]: https://material.io/components/progress-indicators#circular-progress-indicators
 [2]: https://material.io/develop/web/components/progress-indicator
