--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-4-search-combo.mdx
@@ -17,9 +17,7 @@ Visually, it looks identical to a _search field_ by itself.
 
 ### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps4SearchComboStories.initial} />
-</Canvas>
+<Canvas of={UqMaps4SearchComboStories.initial} />
 
 ## 4B. On focus or selecting origin/destination
 
@@ -34,33 +32,25 @@ Some POI and/or category items should be suggested before the user enters any
 text. The following example shows an alphabetical list of categories. However,
 we should show some data-driven POI's/categories instead.
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps4SearchComboStories.focused} />
-</Canvas>
+<Canvas of={UqMaps4SearchComboStories.focused} />
 
 ## 4C. With search value
 
 ### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps4SearchComboStories.searching} />
-</Canvas>
+<Canvas of={UqMaps4SearchComboStories.searching} />
 
 ## 4D. With search value but no results
 
 ### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps4SearchComboStories.searchingNoResults} />
-</Canvas>
+<Canvas of={UqMaps4SearchComboStories.searchingNoResults} />
 
 ## 4E. With search value but with search error
 
 ### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps4SearchComboStories.searchingError} />
-</Canvas>
+<Canvas of={UqMaps4SearchComboStories.searchingError} />
 
 ## 4F. With search value AND category item opened
 
@@ -70,9 +60,7 @@ list items.
 
 ### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps4SearchComboStories.searchingInCategory} />
-</Canvas>
+<Canvas of={UqMaps4SearchComboStories.searchingInCategory} />
 
 ## JavaScript UX enhancements
 
