--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-5-slide-drawer.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-5-slide-drawer.mdx
@@ -15,6 +15,4 @@ this should be the entire screen.
 
 ### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps5SlideDrawerStories.expanded} />
-</Canvas>
+<Canvas of={UqMaps5SlideDrawerStories.expanded} />
