--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-6-app-info.mdx
@@ -16,14 +16,10 @@ Implements the _slide drawer_ and _badge_ to display app info.
 
 #### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps6AppInfoStories.closed} />
-</Canvas>
+<Canvas of={UqMaps6AppInfoStories.closed} />
 
 ### 6B. Open
 
 #### Basic usage
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={UqMaps6AppInfoStories.open} />
-</Canvas>
+<Canvas of={UqMaps6AppInfoStories.open} />
