--- a/packages/storybook-html/stories/deprecated/side-nav/side-nav.mdx
+++ b/packages/storybook-html/stories/deprecated/side-nav/side-nav.mdx
@@ -18,9 +18,7 @@ A vertical list of links for site navigation typically placed next to the body c
 
 ### Single-level
 
-<Canvas sourceState="hidden">
-  <Story of={SideNavStories.sideNavSingleLevel} />
-</Canvas>
+<Canvas of={SideNavStories.sideNavSingleLevel} />
 
 ```html
 <!-- Side nav single-level -->
@@ -49,9 +47,7 @@ A vertical list of links for site navigation typically placed next to the body c
 
 ### Multi-level
 
-<Canvas sourceState="hidden">
-  <Story of={SideNavStories.sideNavMultiLevel} />
-</Canvas>
+<Canvas of={SideNavStories.sideNavMultiLevel} />
 
 ```html
 <!-- Side nav multi-level -->
