--- a/packages/storybook-html/stories/components/hero/hero.mdx
+++ b/packages/storybook-html/stories/components/hero/hero.mdx
@@ -28,9 +28,7 @@ There are 2 size variations - small (default) and large (use the `.uq-hero--larg
 
 There are 2 color variations - purple (default) and white (use the `.uq-hero--light` modifier class).
 
-<Canvas sourceState={"none"}>
-  <Story of={HeroStories.Hero} />
-</Canvas>
+<Canvas of={HeroStories.Hero} sourceState='hidden' />
 
 <Source of={HeroStories.Hero} />
 
