--- a/packages/storybook-html/stories/deprecated/footer-legacy/footer.mdx
+++ b/packages/storybook-html/stories/deprecated/footer-legacy/footer.mdx
@@ -16,9 +16,7 @@ The global footer provides a consistent branding and navigational element across
 
 ## Default example
 
-<Canvas sourceState="hidden" withToolbar>
-  <Story of={FooterStories.footer} />
-</Canvas>
+<Canvas of={FooterStories.footer} />
 
 ```html
 <footer class="legacy-footer">
