--- a/packages/storybook-html/stories/components/alert/alert.mdx
+++ b/packages/storybook-html/stories/components/alert/alert.mdx
@@ -262,11 +262,12 @@ Global alerts are darker variants of alerts that are used to convey a globally i
 
 ### Loaded from an external API
 
-<Canvas of={AlertStories.loadedFromExternalUri} 
+<Canvas
+  of={AlertStories.loadedFromExternalUri}
   story={{
-     autoplay : true,
+    autoplay: true,
   }}
-withToolbar={true}  
+  withToolbar={true}
 />
 
 ```html
