--- a/packages/storybook-html/stories/components/header/header.mdx
+++ b/packages/storybook-html/stories/components/header/header.mdx
@@ -27,12 +27,12 @@ The interim header is suitable for a broad range of sites and applications, it i
 - An optional third navigation section is available on mobile when paired with the [Site header component](?path=/docs/components-site-header--site-header-with-subnav), which provides site title and local navigation options. This combines to provide a stacked mobile menu of all three sections (Local, primary and secondary navigation).
 
 <Canvas
-of={HeaderStories.HeaderInterim}
+  of={HeaderStories.HeaderInterim}
   story={{
-     autoplay : true,
-    height: '200px'
+    autoplay: true,
+    height: "200px",
   }}
-withToolbar={true}  
+  withToolbar={true}
 />
 
 ### Header with mega menu
@@ -45,10 +45,10 @@ Currently reserved for the UQ Homepage and level one landing pages for Study, Re
 <Canvas
   of={HeaderStories.Header}
   story={{
-     autoplay : true,
-     height: '200px'
+    autoplay: true,
+    height: "200px",
   }}
-withToolbar={true}  
+  withToolbar={true}
 />
 
 ### Usage
