--- a/packages/storybook-html/stories/components/site-header/site-header.mdx
+++ b/packages/storybook-html/stories/components/site-header/site-header.mdx
@@ -19,12 +19,13 @@ The site header component is comprised of the site title, the site navigation, a
 
 A site header with a site title, a site utility, and a two-level site navigation.
 
-<Canvas 
-of={SiteHeaderStories.siteHeaderWithSubnav} 
+<Canvas
+  of={SiteHeaderStories.siteHeaderWithSubnav}
   story={{
-     autoplay : true,
+    autoplay: true,
   }}
-withToolbar={true}  />
+  withToolbar={true}
+/>
 
 #### Usage
 
@@ -73,12 +74,13 @@ Slider mobile menu
 
 A site header with site title and a one-level site navigation.
 
-<Canvas 
-of={SiteHeaderStories.siteHeaderWithoutSubnav} 
+<Canvas
+  of={SiteHeaderStories.siteHeaderWithoutSubnav}
   story={{
-     autoplay : true,
+    autoplay: true,
   }}
-withToolbar={true}  />
+  withToolbar={true}
+/>
 
 ## Variants
 
