--- a/packages/storybook-html/stories/components/tabs/tabs.mdx
+++ b/packages/storybook-html/stories/components/tabs/tabs.mdx
@@ -18,10 +18,12 @@ hierarchical level.
 
 ### Default / Outline
 
-<Canvas of={TabsStories.tabsOutline}
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={TabsStories.tabsOutline}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <div id="tabsDefaultExample" class="uq-tabs uq-tabs--outline">
@@ -95,10 +97,12 @@ story={{
 
 ### Minimal
 
-<Canvas of={TabsStories.tabsMinimal} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={TabsStories.tabsMinimal}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <div class="uq-tabs">...</div>
@@ -106,10 +110,12 @@ story={{
 
 ### Lined
 
-<Canvas of={TabsStories.tabsLined} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={TabsStories.tabsLined}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <div class="uq-tabs uq-tabs--lined">...</div>
@@ -117,10 +123,12 @@ story={{
 
 ### With icon
 
-<Canvas of={TabsStories.tabsWithIcon} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={TabsStories.tabsWithIcon}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <div class="uq-tabs uq-tabs--outline">
@@ -141,10 +149,12 @@ story={{
 
 ### Full width
 
-<Canvas of={TabsStories.tabsFullWidth} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={TabsStories.tabsFullWidth}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <div class="uq-tabs uq-tabs--outline uq-tabs--full-width">...</div>
@@ -152,10 +162,12 @@ story={{
 
 ### Small
 
-<Canvas of={TabsStories.tabsSmall} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={TabsStories.tabsSmall}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <div class="uq-tabs uq-tabs--outline uq-tabs--small">...</div>
@@ -163,10 +175,12 @@ story={{
 
 ### Reversed
 
-<Canvas of={TabsStories.tabsReversed} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={TabsStories.tabsReversed}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <div class="uq-tabs uq-tabs--outline uq-tabs--reversed">...</div>
