--- a/packages/storybook-html/stories/deprecated/header-legacy/header.mdx
+++ b/packages/storybook-html/stories/deprecated/header-legacy/header.mdx
@@ -25,10 +25,12 @@ using [_UQ Search_](https://www.uq.edu.au/search).
 > functionality within your application e.g. searching for a location on a map,
 > searching for books or articles in a library database.
 
-<Canvas of={HeaderStories.headerNoLocalSearch} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={HeaderStories.headerNoLocalSearch}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <header class="legacy-header">
@@ -161,10 +163,12 @@ allow users to choose to search all UQ sites or just the content on your site\*.
 > \*If your application/website isn't indexed by UQ Search, please opt
 > to use the global header **with global search only**.
 
-<Canvas of={HeaderStories.header} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={HeaderStories.header}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ```html
 <header class="legacy-header">
