--- a/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
+++ b/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
@@ -22,12 +22,12 @@ Display an error summary _above/before_ the form when the user submits the form
 (_on submit_).
 
 <Canvas
-of={FormValidationStories.EmptyFormSubmitExample}
+  of={FormValidationStories.EmptyFormSubmitExample}
   story={{
-     autoplay : true,
+    autoplay: true,
   }}
-sourceState='hidden'  
- />
+  sourceState="hidden"
+/>
 
 ---
 
@@ -124,12 +124,13 @@ different types of instantaneously feedback types and usage examples.
 
 ## Example: password reset form
 
-<Canvas of={FormValidationStories.PasswordForm_}
+<Canvas
+  of={FormValidationStories.PasswordForm_}
   story={{
-     autoplay : true,
-  }} 
+    autoplay: true,
+  }}
   withToolbar={true}
-  />
+/>
 
 ## Glossary
 
