--- a/packages/storybook-html/stories/components/accordion/accordion.mdx
+++ b/packages/storybook-html/stories/components/accordion/accordion.mdx
@@ -27,7 +27,7 @@ Use divs if there is a significant amount of content to be displayed.
 <Canvas
   of={AccordionStories.usingDivs}
   story={{
-     autoplay : true,
+    autoplay: true,
   }}
 />
 
@@ -64,15 +64,15 @@ Use divs if there is a significant amount of content to be displayed.
 
 Use lists if there is less content and when the semantics of a list serves better with assistive technologies like screen readers.
 
+{" "}
 
-  <Canvas 
+<Canvas
   of={AccordionStories.usingLists}
-    story={{
-     autoplay : true,
+  story={{
+    autoplay: true,
   }}
-withToolbar={true}  
-  />
-
+  withToolbar={true}
+/>
 
 ```html
 <ul class="uq-accordion" aria-label="Accordion button group">
@@ -119,13 +119,15 @@ new uq.accordion();
 
 The subtitle allows for a secondary context. Typically the primary title should provide enough information.
 
+{" "}
 
-  <Canvas of={AccordionStories.HasSubtitle}
-    story={{
-     autoplay : true,
+<Canvas
+  of={AccordionStories.HasSubtitle}
+  story={{
+    autoplay: true,
   }}
-withToolbar={true}  />
-
+  withToolbar={true}
+/>
 
 ```html
 <div
@@ -167,13 +169,15 @@ withToolbar={true}  />
 
 A smaller more compact version. Used as a support class for more complex interfaces mixing components. For general content use the standard size accordion.
 
+{" "}
 
-  <Canvas of={AccordionStories.IsCompact}
-    story={{
-     autoplay : true,
+<Canvas
+  of={AccordionStories.IsCompact}
+  story={{
+    autoplay: true,
   }}
-withToolbar={true}  />
-
+  withToolbar={true}
+/>
 
 ```html
 <div
@@ -219,14 +223,15 @@ By default, users can expand and collapse one accordion at a time. When a user e
 
 Alternate behaviour is to allow users to expand and collapse any number of accordions at a time. When a user expands one accordion then clicks on another, the previously expanded accordion remains expanded and the user will need to manually collapse it. This is useful if users need to view the contents of multiple accordions at a time. To enable this behaviour, add the classname `uq-accordion--is-manual` to the `<div>` or `<ul>` as shown below.
 
+{" "}
 
-  <Canvas of={AccordionStories.isManual} 
-    story={{
-     autoplay : true,
+<Canvas
+  of={AccordionStories.isManual}
+  story={{
+    autoplay: true,
   }}
-withToolbar={true}  
+  withToolbar={true}
 />
-
 
 ```html
 <div
