--- a/packages/storybook-html/stories/components/table/table.mdx
+++ b/packages/storybook-html/stories/components/table/table.mdx
@@ -28,10 +28,7 @@ For instance when there is more content to the left, a transparent shadow appear
 
 #### a. Table scroll - Basic tags with minimal classes
 
-<Canvas
-of={TableStories.table} 
-withToolbar={true}  
-/>
+<Canvas of={TableStories.table} withToolbar={true} />
 
 ```html
 <!-- Table scroll - Basic tags with minimal classes -->
@@ -74,10 +71,7 @@ withToolbar={true}
 
 #### b. Table scroll - Basic tags with classes
 
-<Canvas 
-of={TableStories.tableClasses} 
-withToolbar={true}  
-/>
+<Canvas of={TableStories.tableClasses} withToolbar={true} />
 
 ```html
 <!-- Table scroll - Basic tags with classes -->
@@ -122,10 +116,7 @@ withToolbar={true}
 
 Tables with two headers with unclear header directions needs to define the direction of each header by setting the scope attribute to `col` or `row`.
 
-<Canvas
-of={TableStories.tableMultipleHeaders}
-withToolbar={true}  
-/>
+<Canvas of={TableStories.tableMultipleHeaders} withToolbar={true} />
 
 ```html
 <!-- Table scroll - Multiple headers -->
@@ -177,10 +168,7 @@ withToolbar={true}
 
 Tables with irregular headers have header cells that span multiple columns and/or rows: For these tables, define column and row groups and set the range of the header cells using the `colgroup` and `rowgroup` values of the scope attribute.
 
-<Canvas 
-of={TableStories.tableIrregularHeaders}
-withToolbar={true}  
-/>
+<Canvas of={TableStories.tableIrregularHeaders} withToolbar={true} />
 
 ```html
 <!-- Table scroll - Irregular headers -->
@@ -239,10 +227,7 @@ withToolbar={true}
 
 Tables with multi-level headers have multiple header cells associated per data cell: For tables that are so complex that header cells can’t be associated in a strictly horizontal or vertical way, use `id` and `headers` attributes to associate header and data cells explicitly.
 
-<Canvas
-of={TableStories.tableMultiLevelHeaders} 
-withToolbar={true}  
-/>
+<Canvas of={TableStories.tableMultiLevelHeaders} withToolbar={true} />
 
 ```html
 <!-- Table scroll - Multi-level headers -->
@@ -332,9 +317,7 @@ withToolbar={true}
 In this responsive approach, the component table `tr` is displayed as a grid. At a certain responsive breakpoint, it behaves as folded cards and hides the header `thead`.
 The data attributes assigned to each `tbody` cell helps in understanding the connection between the call value and its associated header when the header `thead` is hidden.
 
-<Canvas of={TableStories.tableCard} 
-withToolbar={true}  
-/>
+<Canvas of={TableStories.tableCard} withToolbar={true} />
 
 ```html
 <!-- Table card -->
