--- a/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
+++ b/packages/storybook-html/stories/deliverables/uq-maps/uq-maps-3-wayfinding-controls.mdx
@@ -18,10 +18,12 @@ location.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas of={UqMaps3WayfindingControlsStories.wayfindingControl} 
-story={{
-     autoplay : true,
-  }} />
+<Canvas
+  of={UqMaps3WayfindingControlsStories.wayfindingControl}
+  story={{
+    autoplay: true,
+  }}
+/>
 
 ## 3B. With circular progress indicator
 
@@ -32,9 +34,10 @@ class to the container instead. We also have to add in some extra markup and
 scripted behaviour for the [_Material Design_][1] progress indicator. Please see example
 code.
 
-<Canvas of={UqMaps3WayfindingControlsStories.wayfindingControlWorking}
-    autoplay
-  />
+<Canvas
+  of={UqMaps3WayfindingControlsStories.wayfindingControlWorking}
+  autoplay
+/>
 
 [1]: https://material.io/components/progress-indicators#circular-progress-indicators
 [2]: https://material.io/develop/web/components/progress-indicator
