--- a/packages/storybook-html/stories/introduction/get-started.mdx
+++ b/packages/storybook-html/stories/introduction/get-started.mdx
@@ -38,7 +38,7 @@ Here are the ways you can start using the UQ Design System right now;
 
 - If you have prior experience with npm and Sass, [use the npm CLI to install components](#using-npm-to-install-components-into-your-project).
 - If you don't have previous experience with npm or Sass, please [contact us at ADS-UI][2] for further options.
-- Designers can go straight to the docs to view working examples. Also, check out the [Future Students Design System][3] (Figma project).
+- Designers can go straight to the docs to view working examples. Also, check out the [One UQ component library][3] (Figma project).
 - If you would like a walkthrough of the docs for your analysis needs, please [contact us][2] for a tour.
 
 ## Reading the docs
