--- a/packages/storybook-html/stories/components/acknowledgement-statement/acknowledgement-statement.mdx
+++ b/packages/storybook-html/stories/components/acknowledgement-statement/acknowledgement-statement.mdx
@@ -19,20 +19,20 @@ import * as AcknowledgementStatementStories from "./acknowledgement-statement.st
 Cultural and reconciliation statements are used to acknowledge the traditional owners of the land and the importance of reconciliation.
 These statements are used to show respect and recognition of the traditional owners of the land and the importance of reconciliation.
 
-### Reconciliation
-
-Reconciliation statement persistent across all UQ Footers
-
-<Canvas sourceState="hidden">
-  <Story of={AcknowledgementStatementStories.reconciliationStatement} />
-</Canvas>
-
 ### Cultural Advise
 
 Cultural statement persistent across all library pages
 
 <Canvas sourceState="hidden">
   <Story of={AcknowledgementStatementStories.culturalAdvise} />
+</Canvas>
+
+### Reconciliation
+
+Reconciliation statement persistent across all UQ Footers and uses the modifier 'uq-acknowledgement-statement--large'
+
+<Canvas sourceState="hidden">
+  <Story of={AcknowledgementStatementStories.reconciliationStatement} />
 </Canvas>
 
 ### States
