added landscape + feature cards

--- a/packages/storybook-html/stories/components/story-card/story-card.mdx
+++ b/packages/storybook-html/stories/components/story-card/story-card.mdx
@@ -19,10 +19,22 @@ import * as StoryCardStories from "./story-card.stories";
 
 <Canvas of={StoryCardStories.StoryCard} />
 
+### Event
+
+<Canvas of={StoryCardStories.EventCard} />
+
 ### News
 
 <Canvas of={StoryCardStories.NewsCard} />
 
-### Event
+### Landscape
 
-<Canvas of={StoryCardStories.EventCard} />
+<Canvas of={StoryCardStories.LandscapeCard} />
+
+### Landscape (no image)
+
+<Canvas of={StoryCardStories.LandscapeNoImageCard} />
+
+### Feature
+
+<Canvas of={StoryCardStories.FeatureCard} />
