tweaks to line clamp - addd missing image variant

--- a/packages/storybook-html/stories/components/story-card/story-card.mdx
+++ b/packages/storybook-html/stories/components/story-card/story-card.mdx
@@ -35,6 +35,12 @@ import * as StoryCardStories from "./story-card.stories";
 
 <Canvas of={StoryCardStories.LandscapeNoImageCard} />
 
+### Landscape (missing image)
+
+Used for legacy content that may not have images.
+
+<Canvas of={StoryCardStories.LandscapeMissingImageCard} />
+
 ### Feature
 
 <Canvas of={StoryCardStories.FeatureCard} />
