--- a/packages/storybook-html/stories/layout/page-layouts/sidebar-right/sidebar-right.mdx
+++ b/packages/storybook-html/stories/layout/page-layouts/sidebar-right/sidebar-right.mdx
@@ -42,4 +42,6 @@ provide correct **section spacing**.
 
 #### Sidebar right layout with News cards.
 
+This example uses the `.uq-reduced-spacing` class for smaller gaps between sections and cards.
+
 <Canvas of={SidebarRightStories.NewsExample} />
