--- a/packages/storybook-html/stories/components/blockquote/blockquote.mdx
+++ b/packages/storybook-html/stories/components/blockquote/blockquote.mdx
@@ -1,7 +1,6 @@
-import { Meta, Story, Canvas } from "@storybook/blocks";
+import { Meta, Canvas, Source } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as BlockquoteStories from "./blockquote.stories";
-import { background } from "@storybook/theming";
 
 <Meta of={BlockquoteStories} />
 
@@ -18,26 +17,9 @@ The blockquote component is used for quoting a passage of text or speech, the au
 
 Displays the blockquote text, author, and source in purple text for use on light backgrounds such as white or light-grey.
 
-<Canvas of={BlockquoteStories.blockquote} />
+<Canvas of={BlockquoteStories.Blockquote} sourceState="none" />
 
-```html
-<figure class="blockquote">
-  <blockquote class="blockquote__body">
-    <p>
-      Words can be like X-rays, if you use them properly—they’ll go through
-      anything. You read and you’re pierced.
-    </p>
-  </blockquote>
-  <figcaption class="blockquote__footer">
-    —Aldous Huxley,
-    <cite
-      ><a href="https://www.huxley.net/bnw/four.html" class="blockquote__link"
-        >Brave New World</a
-      ></cite
-    >
-  </figcaption>
-</figure>
-```
+<Source of={BlockquoteStories.Blockquote} />
 
 ## Variants
 
@@ -45,26 +27,13 @@ Displays the blockquote text, author, and source in purple text for use on light
 
 Changes the colour of the blockquote text to white so it can be used on darker backgrounds such as UQ purple.
 
-<Canvas of={BlockquoteStories.blockquoteLight} />
+<Canvas
+  of={BlockquoteStories.Light}
+  sourceState="none"
+  className="sb-purple-background"
+/>
 
-```html
-<figure class="blockquote blockquote--light">
-  <blockquote class="blockquote__body">
-    <p>
-      Words can be like X-rays, if you use them properly—they’ll go through
-      anything. You read and you’re pierced.
-    </p>
-  </blockquote>
-  <figcaption class="blockquote__footer">
-    —Aldous Huxley,
-    <cite
-      ><a href="https://www.huxley.net/bnw/four.html" class="blockquote__link"
-        >Brave New World</a
-      ></cite
-    >
-  </figcaption>
-</figure>
-```
+<Source of={BlockquoteStories.Light} />
 
 ## How and when to use
 
